{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "6d9c5646-b2c2-4baf-9717-59e188d78904",
            "actions": [
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "de808b02-b889-4939-9bc5-02dde74231a3",
                    "expectedControlType": "Vector2",
                    "processors": "InvertVector2(invertX=false)",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Inspect",
                    "type": "Button",
                    "id": "38d37070-1480-43cb-993b-10a219eecf00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActivateArrowBlock",
                    "type": "Button",
                    "id": "7b8525f4-0fb7-4514-9b92-33a252548ce3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "MovePointer",
                    "type": "Value",
                    "id": "0fd86498-57d5-4d4c-a638-3c30b0ddf2ab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2b489afd-b15e-4407-a37d-53a036c44633",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse;Touchscreen",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6b75803f-4dc9-4001-b37a-901c2877a44e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "Inspect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "22fa3bb2-44e2-4b5a-a4a8-6275ce264da1",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Inspect",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "05fb6c25-b2e7-4ba7-9411-e3fdac70ca3c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "ActivateArrowBlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c16c88a-a164-4f2a-879f-d710eecf7f1c",
                    "path": "<Touchscreen>/touch0/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "ActivateArrowBlock",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ca50ffb-ace9-4a0d-9dc5-8acf973aac3c",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen;Keyboard and Mouse",
                    "action": "MovePointer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}